# tec-processor-image

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.kiro/specs/tec-processor-image/: .config.kiro  design.md  requirements.md  tasks.md
src/processor/: __init__.py  calibration.py  csv_io.py  handler.py  json_io.py  logging.py  logic.py  main.py  nav.py  parquet_io.py  plot_io.py
tests/: conftest.py  test_calibration_property.py  test_csv_io_unit.py  test_ddb_status_unit.py  test_geonet_integration.py  test_geonet_samples_unit.py  test_handler_property.py  test_handler_unit.py  test_json_io_unit.py  test_logging_property.py  test_logging_unit.py  test_logic_property.py  test_logic_unit.py  test_main_unit.py  test_message_payload.py  test_nav_unit.py  test_parquet_io_property.py  test_parquet_io_unit.py  test_plot_io_unit.py  test_process_record_unit.py
tools/: __init__.py  geonet_samples.py  local_geonet_runner.py
