[project]
name = "tec-processor-image"
version = "0.1.0"
description = "TEC processor Lambda container image package."
requires-python = ">=3.11,<3.14"
dependencies = [
  "pyarrow>=23.0.1",
  "polars>=1.5.0",
  # NOTE: pytecgg currently supports Python 3.11-3.13 only.
  # The python_version < '3.14' marker blocks install on Python 3.14.
  # TRACKING (task 9.1): Once PyTECGg publishes Python 3.14-compatible
  # Linux x86_64 wheels on PyPI, remove this marker and proceed with:
  #   - Task 9.2: Update base image, requires-python, CI to Python 3.14
  #   - Task 9.3: Validate full test suite and calibration on Python 3.14
  # Until then, this repository targets Python 3.13 as its runtime.
  # See Requirement 16 in .kiro/specs/tec-processor-image/requirements.md
  "pytecgg>=1.3.0; python_version < '3.14'",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100.0",
  "moto[s3,dynamodb]>=5.0.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
