[project]
name = "tec-processor-image"
version = "0.1.0"
description = "TEC processor Lambda container image package."
requires-python = ">=3.11,<3.14"
dependencies = [
  "awslambdaric>=3.1.1",
  "boto3>=1.42.0",
  "matplotlib>=3.10",
  "plotly>=6.2",
  "pyarrow>=23.0.1",
  "polars>=1.5.0",
  # Runtime pin: this repository targets Python 3.13.
  # Keep this marker aligned with requires-python and CI runtime policy.
  "pytecgg>=1.3.0; python_version < '3.14'",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100.0",
  "moto[s3,dynamodb]>=5.0.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [
  "integration_geonet: live GeoNet + BKG networked integration tests (opt-in)",
]
